--- a/dependency/src/test/resources/maven-multimodule-pl-example/basic_state/base-module/inner-module-2/pom.xml
+++ b/dependency/src/test/resources/maven-multimodule-pl-example/basic_state/base-module/inner-module-2/pom.xml
@@ -30,6 +30,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>de.peass</groupId>
+			<artifactId>inner-module-1</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13.2</version>
