--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,6 +33,8 @@ jobs:
       uses: stCarolas/setup-maven@v4.2
       with:
         maven-version: 3.8.3
+    - name: Test Maven Version
+      run: mvn -version
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
