--- a/dependency/src/test/resources/sourceInstrumentation/project_2/pom.xml
+++ b/dependency/src/test/resources/sourceInstrumentation/project_2/pom.xml
@@ -30,7 +30,7 @@
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
 			<artifactId>kopeme-junit</artifactId>
-			<version>0.14</version>
+			<version>0.15-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.kieker-monitoring</groupId>
