--- a/dependency/src/test/resources/viewtests/repetition_deep/pom.xml
+++ b/dependency/src/test/resources/viewtests/repetition_deep/pom.xml
@@ -10,7 +10,7 @@
     <dependency>
       <groupId>de.dagere.kopeme</groupId>
       <artifactId>kopeme-junit</artifactId>
-      <version>0.14</version>
+      <version>0.15-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
