--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -48,6 +48,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
+				<configuration>
+				    <argLine>
+				        --illegal-access=permit
+				    </argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
