Use maven central source instrumentation

--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -99,7 +99,7 @@
 		<dependency>
 			<groupId>de.dagere.kieker</groupId>
 			<artifactId>kieker-source-instrumentation</artifactId>
-			<version>1.15.0-SNAPSHOT</version>
+			<version>1.15.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sourceforge.teetime</groupId>
