--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>analysis</artifactId>
 	<name>peass-analysis</name>
@@ -85,10 +86,8 @@
 		<profile>
 			<id>buildFatJar</id>
 			<activation>
-				<!-- The shade plugin took ~ 21 s from 25 s of build, if a shaded jar 
-					is built for every module Therfore, share is commented out currently; if 
-					a separate dependency-jar is needed, it could be re-enabled (or transfered 
-					to a profile) -->
+				<!-- The shade plugin took ~ 21 s from 25 s of build, if a shaded jar is built for every module Therfore, share is commented out currently; if a separate dependency-jar 
+					is needed, it could be re-enabled (or transfered to a profile) -->
 			</activation>
 			<build>
 				<plugins>
