--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -130,12 +130,12 @@
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
 			<artifactId>kopeme-junit</artifactId>
-			<version>0.15.1-SNAPSHOT</version>
+			<version>0.15.1</version>
 		</dependency>
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
 			<artifactId>kopeme-junit3</artifactId>
-			<version>0.15.1-SNAPSHOT</version>
+			<version>0.15.1</version>
 			<scope>test</scope>
 		</dependency>
 
