--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,19 @@
 		<module>dependency</module>
 		<module>measurement</module>
 		<module>analysis</module>
-		<module>distribution</module>
 	</modules>
+
+	<profiles>
+		<profile>
+			<id>buildDistribution</id>
+			<modules>
+				<module>dependency</module>
+				<module>measurement</module>
+				<module>analysis</module>
+				<module>distribution</module>
+			</modules>
+		</profile>
+	</profiles>
 
 	<build>
 		<plugins>
