--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -105,6 +105,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.dagere.peass</groupId>
+			<artifactId>peass-jmh</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>de.dagere.peass</groupId>
 			<artifactId>analysis</artifactId>
 			<version>0.1.1-SNAPSHOT</version>
 		</dependency>
