--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Build Peass dependency, measurement and analysis
       run: ./mvnw -B install --file pom.xml && ls ~/.m2/repository/ && ls ~/.m2/repository/de/dagere/kopeme/kopeme-core
     - name: Build Peass dependency, measurement and analysis
-      run: cd peass-jmh && ./mvnw -B install --file pom.xml && cd ..
+      run: cd peass-jmh && ../mvnw -B install --file pom.xml && cd ..
     - name: Publish Test Report ${{ matrix.java }} OS ${{ matrix.os }}
       if: ${{ always() }}
       uses: scacap/action-surefire-report@v1
