--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,7 +43,7 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
     - name: Build Peass dependency, measurement and analysis
       run: ./mvnw -B install --file pom.xml && ls ~/.m2/repository/ && ls ~/.m2/repository/de/dagere/kopeme/kopeme-core
-    - name: Build Peass dependency, measurement and analysis
+    - name: Build Peass-JMH
       run: cd peass-jmh && ../mvnw -B install --file pom.xml && cd ..
     - name: Publish Test Report ${{ matrix.java }} OS ${{ matrix.os }}
       if: ${{ always() }}
