--- a/peass-jmh/pom.xml
+++ b/peass-jmh/pom.xml
@@ -79,12 +79,12 @@
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
 			<artifactId>kopeme-junit</artifactId>
-			<version>0.15.1</version>
+			<version>0.15.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
 			<artifactId>kopeme-junit3</artifactId>
-			<version>0.15.1</version>
+			<version>0.15.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
