--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -132,12 +132,12 @@
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
 			<artifactId>kopeme-junit</artifactId>
-			<version>0.15.2</version>
+			<version>0.15.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
 			<artifactId>kopeme-junit3</artifactId>
-			<version>0.15.2</version>
+			<version>0.15.3-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
