--- a/peass-jmh/pom.xml
+++ b/peass-jmh/pom.xml
@@ -11,6 +11,7 @@
 	<name>peass-jmh</name>
 	<version>0.1.0-SNAPSHOT</version>
 	<inceptionYear>2021</inceptionYear>
+	<url>https://github.com/DaGeRe/peass/</url>
 
 	<build>
 		<plugins>
@@ -56,6 +57,20 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -108,7 +123,7 @@
 			<email>kopeme@dagere.de</email>
 		</developer>
 	</developers>
-	
+
 	<scm>
 		<connection>scm:git:ssh://github.com:DaGeRe/peass.git</connection>
 		<developerConnection>scm:git:git@github.com:DaGeRe/peass.git</developerConnection>
@@ -136,7 +151,7 @@
 			</snapshots>
 		</repository>
 	</repositories>
-	
+
 	<distributionManagement>
 		<snapshotRepository>
 			<id>sonatype-nexus-snapshots</id>
