--- a/peass-jmh/pom.xml
+++ b/peass-jmh/pom.xml
@@ -2,14 +2,13 @@
 <!-- This file is part of PerAn. PerAn is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published 
 	by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. PerAn is distributed in the hope that it will be useful, 
 	but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. 
-	You should have received a copy of the GNU General Public License along with PerAn. If not, see <http://www.gnu.org/licenses/>. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	You should have received a copy of the GNU General Public License along with PerAn. If not, see <http://www.gnu.org/licenses />. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.dagere.peass</groupId>
 	<artifactId>peass-jmh</artifactId>
 	<name>peass-jmh</name>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<inceptionYear>2021</inceptionYear>
 	<url>https://github.com/DaGeRe/peass/</url>
 	<description>Enables the execution of JMH benchmarks with Peass regression test selection and root cause analysis</description>
@@ -140,7 +139,7 @@
 		<connection>scm:git:ssh://github.com:DaGeRe/peass.git</connection>
 		<developerConnection>scm:git:git@github.com:DaGeRe/peass.git</developerConnection>
 		<url>https://git@github.com:DaGeRe/peass.git</url>
-		<tag>HEAD</tag>
+		<tag>peass-jmh-0.1.0</tag>
 	</scm>
 
 	<licenses>
