--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -3,7 +3,8 @@
 	by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. PerAn is distributed in the hope that it will be useful, 
 	but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. 
 	You should have received a copy of the GNU General Public License along with PerAn. If not, see <http://www.gnu.org/licenses />. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>dependency</artifactId>
 	<name>peass-dependency</name>
@@ -105,6 +106,11 @@
 			<artifactId>teetime</artifactId>
 			<version>3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.github.java-diff-utils</groupId>
+			<artifactId>java-diff-utils</artifactId>
+			<version>4.9</version>
+		</dependency>
 
 		<!-- Normally, we just use log4j2. Since kieker relies on slf4j, we need to add the bridge -->
 		<dependency>
@@ -125,8 +131,7 @@
 		</dependency>
 
 		<!-- Both are needed in your local maven repo, and both should be downloaded when building (but are only needed at runtime, if a project does not use snapshot 
-			repo)  
-			If you update the version, please do not forget to *update* also MavenPomUtil.KOPEME_VERSION. As a general convention, Snapshot-versions should only used in 
+			repo) If you update the version, please do not forget to *update* also MavenPomUtil.KOPEME_VERSION. As a general convention, Snapshot-versions should only used in 
 			the develop branch; in the main branch, releases should be used -->
 		<dependency>
 			<groupId>de.dagere.kopeme</groupId>
