--- a/.github/workflows/buildPeass.yml
+++ b/.github/workflows/buildPeass.yml
@@ -41,6 +41,8 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
+    - name: Build Peass all (for version compatibility check)
+      run: ./mvnw -B package -DskipTests -P buildStarter --file pom.xml && ls ~/.m2/repository/ && ls ~/.m2/repository/de/dagere/kopeme/kopeme-core
     - name: Build Peass dependency, measurement and analysis
       run: ./mvnw -B install --file pom.xml && ls ~/.m2/repository/ && ls ~/.m2/repository/de/dagere/kopeme/kopeme-core
     - name: Publish Test Report ${{ matrix.java }} OS ${{ matrix.os }}
