--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>de.dagere.peass</groupId>
 		<artifactId>peass-parent</artifactId>
-		<version>0.1.7</version>
+		<version>0.1.8-SNAPSHOT</version>
 	</parent>
 
 	<build>
@@ -86,13 +86,13 @@
 		<dependency>
 			<groupId>de.dagere.peass</groupId>
 			<artifactId>dependency</artifactId>
-			<version>0.1.7</version>
+			<version>0.1.8-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>de.dagere.peass</groupId>
 			<artifactId>dependency</artifactId>
-			<version>0.1.7</version>
+			<version>0.1.8-SNAPSHOT</version>
 			<classifier>tests</classifier>
 			<scope>test</scope>
 		</dependency>
