--- a/peass-jmh/pom.xml
+++ b/peass-jmh/pom.xml
@@ -90,12 +90,12 @@
 		<dependency>
 			<groupId>de.dagere.peass</groupId>
 			<artifactId>dependency</artifactId>
-			<version>0.1.7-SNAPSHOT</version>
+			<version>0.1.7</version>
 		</dependency>
 		<dependency>
 			<groupId>de.dagere.peass</groupId>
 			<artifactId>dependency</artifactId>
-			<version>0.1.7-SNAPSHOT</version>
+			<version>0.1.7</version>
 			<classifier>tests</classifier>
 			<scope>test</scope>
 		</dependency>
