--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>de.dagere.peass</groupId>
 		<artifactId>peass-parent</artifactId>
-		<version>0.1.8</version>
+		<version>0.1.9-SNAPSHOT</version>
 	</parent>
 
 	<build>
@@ -46,12 +46,12 @@
 		<dependency>
 			<groupId>de.dagere.peass</groupId>
 			<artifactId>measurement</artifactId>
-			<version>0.1.8</version>
+			<version>0.1.9-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>de.dagere.peass</groupId>
 			<artifactId>dependency</artifactId>
-			<version>0.1.8</version>
+			<version>0.1.9-SNAPSHOT</version>
 			<classifier>tests</classifier>
 			<scope>test</scope>
 		</dependency>
