--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>de.dagere.peass</groupId>
 		<artifactId>peass-parent</artifactId>
-		<version>0.1.8</version>
+		<version>0.1.9-SNAPSHOT</version>
 	</parent>
 
 	<build>
