Use extracted sequitur library

--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -150,7 +150,12 @@
 			<version>5.8.2</version>
 			<scope>test</scope>
 		</dependency>
-
+    
+        <dependency>
+          <groupId>de.dagere</groupId>
+          <artifactId>requitur</artifactId>
+          <version>0.0.1</version>
+        </dependency>
 
 		<dependency>
 			<groupId>co.unruly</groupId>
